about slider and start about adaptation

--- a/src/pug/pages/about.pug
+++ b/src/pug/pages/about.pug
@@ -56,7 +56,7 @@ block variable
     ]
     var aboutSliderText = [
       '<span class="bold">КИЇВПРОЕКТ — київське місце сили,</span> де народжувалися найпрогресивніші ідеї, ухвалювалися найсміливіші рішення та формувалися найактуальніші тренди.',
-      '<span class="bold">КИЇВПРОЕКТ – це історія Києва</span> другої половини ХХ століття.',
+      '<span class="bold">КИЇВПРОЕКТ – це історія Києва </span> другої половини ХХ століття.',
       '<span class="bold">Наша мета – зберегти цю історію,</span> яка об\'єднує минуле та майбутнє.',
       ]
   
@@ -93,6 +93,7 @@ block content
       .about-slider__title
         .subtitle.black.bold Будівлі, спроєктовані у КИЇВПРОЕКТІ
       .about-slider__slides.swiper-container 
+        .swiper-container__bg
         .swiper-wrapper
           img(src="./assets/images/about/slide1.jpg").swiper-slide
           img(src="./assets/images/about/slide1.jpg").swiper-slide
