--- a/src/assets/styles/pages/about.scss
+++ b/src/assets/styles/pages/about.scss
@@ -56,6 +56,12 @@
         border-left: 1px solid #DBDBDB;
         border-right: 1px solid #DBDBDB;
     }
+    @include to(1240px){
+      .info-list-item {
+        padding-left: 5%;
+        padding-right: 5%;
+      }
+    }
 }
 
 .about-double-side-block3 {
@@ -85,18 +91,20 @@
     max-width: 1360px;
     margin-left: auto;
     margin-right: auto;
+    --title-width:195px;
+    --between-margin:50px;
     &__foto-wrap {
-        width: calc((100% - 195px) / 2 - 100px);
-        margin-left: 50px;
-        margin-right: 50px;
-        width: min(calc((100% - 195px) / 2 - 100px), 360px);
+        width: calc((100% - var(--title-width)) / 2 - (var(--between-margin) * 2));
+        margin-left: var(--between-margin);
+        margin-right: var(--between-margin);
+        width: min(calc((100% - var(--title-width)) / 2 - (var(--between-margin) * 2)), 360px);
         margin-left: auto;
         margin-right: auto;
     }
     &__text {
-        width: calc((100% - 195px) / 2 - 100px);
-        margin-left: 50px;
-        margin-right: 50px;
+        width: calc((100% - var(--title-width)) / 2 - (var(--between-margin) * 2));
+        margin-left: var(--between-margin);
+        margin-right: var(--between-margin);
     }
     &__foto {
         position: relative;
@@ -140,7 +148,7 @@
     }
     &__title {
         height: 192px;
-        width: 195px;
+        width: var(--title-width);
         position: relative;
         display: flex;
         padding-top: 30px;
@@ -177,6 +185,17 @@
         padding-left: 1px;
         padding-right: 1px;
     }
+    @include to(1024px){
+      --between-margin:10px;
+        padding-left: 40px;
+        padding-right: 40px;
+        background-size: 75px, 75px;
+        &__text {
+          width: 100%;
+          margin-top: 20px;
+      }
+    }
+
 }
 
 .simple-text-block {
@@ -265,6 +284,18 @@
     &>.subtitle-with-vertical-decor:nth-last-child(-n+2) {
         min-height: calc(var(--decor-width) * 5);
     }
+    @include to(1240px){
+      &__list>* {
+        padding-left: 5%;
+        padding-right: 5%;
+      }
+    }
+    @include to(1024px){
+      &>.subtitle-with-vertical-decor {
+        padding-right: calc(var(--decor-width) + 5%);
+        font-size: 12px;
+      }
+    }
 }
 
 .dimensions-single-block {
@@ -299,7 +330,10 @@
     }
     // display: flex;
     // flex-wrap: wrap;
-    &>img {}
+    &>img {
+      height: 100%;
+      object-fit: cover;
+    }
     &__text {}
     &:nth-child(odd) {
         // background-color: red;
@@ -311,12 +345,32 @@
         grid-column-end: 2;
         grid-row-start: 1;
         grid-row-end: 1;
+        height: 100%;
+        object-fit: cover;
     }
     &:nth-child(odd) &__text {
         grid-column-start: 1;
         grid-column-end: 1;
         grid-row-start: 1;
         grid-row-end: 1;
+    }
+    @include to(1240px){
+      grid-template-columns: 60% 40%;
+      &:nth-child(odd) {
+          // background-color: red;
+          grid-template-columns: 40% 60%;
+      }
+    }
+    @include to(1024px){
+      grid-template-columns: 50% 50%;
+      .info-list-item {
+        padding-left: 5%;
+        padding-right: 5%;
+      }
+      &:nth-child(odd) {
+          // background-color: red;
+          grid-template-columns: 50% 50%;
+      }
     }
 }
 
@@ -348,10 +402,19 @@
             text-align: center;
             border: 1px solid #DBDBDB;
             height: 100%;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            align-content: center;
         }
     }
     &__slides {
         grid-area: 2/2/2/6;
+        img {
+          object-fit: cover;
+          height: 100%;
+        }
     }
     &__title {
         grid-area: 1 / 2 / 2 / 6;
@@ -367,12 +430,14 @@
         right: var(--decor-width);
         top: 50%;
         transform: translateY(-50%);
+        z-index: 3;
     }
     [data-prev] {
         position: absolute;
         left: var(--decor-width);
         top: 50%;
         transform: translateY(-50%) rotate(-180deg);
+        z-index: 3;
     }
     &__line-left,
     &__line-right {
@@ -383,6 +448,33 @@
     }
     &__line-right {
         grid-area: 1/5/1/7;
+    }
+
+    .swiper-container__bg1 {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      background: url(../images/ctc/icon-title-decor-bg.svg) top;
+      // background-repeat: repeat-x;
+      z-index: 2;
+    }
+    @include from(1680px){
+      grid-template-columns: 200px 1fr 1fr 1fr 1fr 200px;
+      grid-template-rows: 15% 70% 15%;
+    }
+    @include to(1024px){
+      background-image: none;
+      grid-template-rows: 2fr 6fr 2fr;
+      --decor-width:0;
+      &__slides {
+        grid-area: 2/1/2/7;
+      }
+      &__title {
+        grid-area: 1 / 1 / 2 / 7;
+      }
     }
 }
 
